--- a/paginaLogin/styleLogin.css
+++ b/paginaLogin/styleLogin.css
@@ -10,18 +10,20 @@ header {
 
 section {
     background: white;
-    border-radius: 10px;
-    padding: 15px;
-    width: 600px;
+    padding: 10px;
+    width: 330px;
+    height: 400px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.36);
 }
 
+
 footer {
     color: white;
     text-align: center;
-    font-style: italic;
 }
-div {
-    padding: 10px;
+
+#login{
+    height: 377px;
+    text-align: center;
 }
